# poke-ai-back

./: README.md  pyproject.toml  requirements.txt  vercel.json
src/: App.py  main.py
src/controllers/: PokeController.py  TesteController.py
src/libraries/: PokeAi.py
src/models/: Pokemon.py  Teste.py
src/pokes/descriptions/: Aquacristal.json  Aquafrost.json  Dracorax.json  Fadaron.json  Faiadra.json  Flameskarn.json  Floraxen.json
src/services/: PokeService.py  TesteService.py
